Fix spacing on mobile view of game page

--- a/client/src/assets/gameOverview.css
+++ b/client/src/assets/gameOverview.css
@@ -65,6 +65,9 @@
 
 #appStore-info{
     grid-area: app;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #appStore-info > img {
